<resources>
    <string name="app_name">ColorMyView</string>
    <string name="box_one">box one</string>
    <string name="box_two">box two</string>
    <string name="box_three">box three</string>
    <string name="box_four">box four</string>
    <string name="box_five">box five</string>
    <string name="play">How to Play:</string>
    <string name="desc">tap the view to change colors!</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
</resources>